deploy/k8s/k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mingsha-dashboard
  labels:
    name: mingsha-dashboard
